# RemoteOverlayCompositor

./: .gitignore  AGENT.md  README.md
compositor/: README.md  package-lock.json  package.json  tsconfig.json
compositor/src/: index.ts
compositor/src/config/: environment.ts
compositor/src/core/: compositorState.ts  layerRegistry.ts  presetStore.ts  revision.ts
compositor/src/http/: server.ts
compositor/src/ws/: protocol.ts  server.ts
docs/: STATUS.md
obs-plugin/: CMakeLists.txt  README.md
obs-plugin/include/roc/: ControlProtocol.hpp  ControlTransport.hpp  LayerState.hpp  PluginCoordinator.hpp  RemoteControlSession.hpp  RemoteLayerItem.hpp  RemoteStateStore.hpp
obs-plugin/src/: ControlProtocol.cpp  PluginCoordinator.cpp  RemoteControlSession.cpp  RemoteLayerItem.cpp  RemoteStateStore.cpp
obs-plugin/tests/: ControlProtocolTests.cpp  RemoteControlSessionTests.cpp  RemoteStateStoreTests.cpp  TestMain.cpp
